added fill ins for conf scripts and added more tasks to fab file

--- a/scripts/sheetswap_nginx.conf
+++ b/scripts/sheetswap_nginx.conf
@@ -1,11 +1,11 @@
 server {
     listen 80;
-    server_name ec2-52-39-33-139.us-west-2.compute.amazonaws.com;
+    server_name HOST_NAME;
 
-    root /home/ubuntu/sheetswap/static;
+    root STATIC_DIRECTORY;
 
-    access_log /var/log/access.log;
-    error_log /var/log/error.log;
+    access_log /var/nginx/log/HOST_NAME_access.log;
+    error_log /var/nginx/log/HOST_NAME_error.log;
 
     location / {
         proxy_set_header X-Forward-For $proxy_add_x_forwarded_for;
@@ -18,7 +18,7 @@ server {
     }
 
     location /static {
-        alias  /home/ubuntu/sheetswap/static;
+        alias  STATIC_DIRECTORY;
         autoindex on;
     }
 }
