--- a/scripts/sheetswap.conf
+++ b/scripts/sheetswap.conf
@@ -1,5 +1,5 @@
-[program:sheetswap]
-command = /home/ubuntu/sheetswap/start.sh
-directory = /home/ubuntu/sheetswap
-environment=PATH="/home/ubuntu/sheetswap/web/bin"
-user = ubuntu
+[program:HOST_NAME]
+command = ROOT_DIRECTORY/scripts/start.sh
+directory = ROOT_DIRECTORY
+environment=PATH="VIRTUALENV_DIRECTORY/bin"
+user = USER
