added celery configuration to deployment script

--- a/scripts/sheetswap.conf
+++ b/scripts/sheetswap.conf
@@ -3,3 +3,19 @@ command = ROOT_DIRECTORY/scripts/start.sh
 directory = ROOT_DIRECTORY
 environment=PATH="VIRTUALENV_DIRECTORY/bin"
 user = USER
+
+[program:celery]
+command=celery worker -A app.celery worker -l info
+directory=ROOT_DIRECTORY
+environment=PATH="VIRTUALENV_DIRECTORY/bin"
+
+stdout_logfile=/var/log/celery/worker.log
+stderr_logfile=/var/log/celery/worker.log
+autostart=true
+autorestart=true
+startsecs=10
+
+stopwaitsecs = 200
+
+killasgroup=true
+priority=1000
