another fix to deploy script

--- a/scripts/sheetswap.conf
+++ b/scripts/sheetswap.conf
@@ -5,7 +5,7 @@ environment=PATH="VIRTUALENV_DIRECTORY/bin"
 user = USER
 
 [program:celery]
-command=celery worker -A app.celery worker -l info
+command=VIRTUALENV_DIRECTORY/bin/celery worker -A app.celery worker -l info
 directory=ROOT_DIRECTORY
 environment=PATH="VIRTUALENV_DIRECTORY/bin"
 
