--- a/scripts/sheetswap.conf
+++ b/scripts/sheetswap.conf
@@ -5,7 +5,7 @@ environment=PATH="VIRTUALENV_DIRECTORY/bin"
 user = USER
 
 [program:celery]
-command=VIRTUALENV_DIRECTORY/bin/celery -A app.celery worker -l info
+command= ROOT_DIRECTORY/scripts/celery_start.sh
 directory=ROOT_DIRECTORY
 environment=PATH="VIRTUALENV_DIRECTORY/bin"
 
