fixed supervisor script

--- a/scripts/sheetswap.conf
+++ b/scripts/sheetswap.conf
@@ -4,18 +4,17 @@ directory = ROOT_DIRECTORY
 environment=PATH="VIRTUALENV_DIRECTORY/bin"
 user = USER
 
-[program:celery]
+[program:HOST_NAME_celery]
 command= ROOT_DIRECTORY/scripts/celery_start.sh
-directory=ROOT_DIRECTORY
+directory= ROOT_DIRECTORY
 environment=PATH="VIRTUALENV_DIRECTORY/bin"
-
-stdout_logfile=/var/log/celery/worker.log
-stderr_logfile=/var/log/celery/worker.log
+user = USER
+numprocs=1
+stdout_logfile=/var/log/celery/HOST_NAME_worker.log
+stderr_logfile=/var/log/celery/HOST_NAME_worker.log
 autostart=true
 autorestart=true
 startsecs=10
-
 stopwaitsecs = 200
-
 killasgroup=true
 priority=1000
