updated nginx for file uploading sizes

--- a/scripts/sheetswap_nginx.conf
+++ b/scripts/sheetswap_nginx.conf
@@ -3,7 +3,7 @@ server {
     server_name HOST_NAME;
 
     root STATIC_DIRECTORY;
-
+    client_max_body_size 15m;
     access_log /var/log/nginx/HOST_NAME_access.log;
     error_log /var/log/nginx/HOST_NAME_error.log;
 
